# Vkomic

./: .gitignore  ANALYSE_DIFFERENCES.md  App.tsx  App_dump.txt  BUILD_GUIDE.md  JULES_PROMPT.md  LICENSE.md  README.md  app.json  build_d1615b3.yml  clean-workspace.sh  commits.txt  commits_utf8.txt  dev-app-update.yml  electron-env.d.ts  file_list_mobile.txt  global.d.ts  index.css  index.html  index.js  index.tsx  metadata.json  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  types.ts  vite.config.ts
.claude/: settings.local.json
.jules/: bolt.md
android/: build_log.txt  build_release_log.txt  build_release_log_v2.txt  build_release_log_v3.txt  build_release_log_v4.txt  gradle.properties  settings.gradle
benchmarks/: vk-parsing.js
components/: BrowserView.tsx  ConfirmationModal.tsx  DownloadsView.tsx  Icons.tsx  LibraryItem.tsx  LibraryView.tsx  MainView.tsx  SettingsView.tsx  Sidebar.tsx  TopBar.tsx  UpdateModal.tsx  WindowControls.tsx
electron/: main.js  preload.js  vk-service.js
hooks/: useAppUpdate.ts  useDownloads.ts  useVkConnection.ts
i18n/: TranslationProvider.tsx  en.ts  fr.ts  index.ts
lib/: tauri.ts
mobile/: App.tsx  app.json  package-lock.json  package.json  temp_lines.txt
src/: types.ts
src-tauri/: Cargo.toml  compilation_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  fs_ops.rs  lib.rs  settings.rs  vk_api.rs  vk_parser.rs
utils/: constants.ts  formatters.ts  logger.ts  pathUtils.ts  region.ts  storage.ts  text.ts  (+2 more)
(+72 files in other folders)
