[package]
name = "app"
version = "1.3.0"
description = "A Tauri App"
authors = ["G-kylexy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-recursion = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
futures = "0.3"
urlencoding = "2"
anyhow = "1"
futures-util = "0.3"
log = "0.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-shell = "2.3.4"

[features]
# Needed because tauri CLI runs with --no-default-features
default = []
custom-protocol = ["tauri/custom-protocol"]
